revised front end to parse messages correctly and show 5 most recent messages

--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -55,11 +55,11 @@
                       <div class="row">
                         
                         <ul id="demo3">
-                          <li id="message1" class="news-item"></li>
-                          <li id="message2" class="news-item"></li>
-                          <li id="message3" class="news-item"></li>
-                          <li id="message4" class="news-item"></li>
-                          <li id="message5" class="news-item"></li>
+                          <li id="message1" class="news-item">2/6/2015 4:51:58 414467: Libero ut incidunt quaerat. Fugit velit aut aliquid. Omnis voluptas fuga tempora expedita odio ex. Aut tempora dolor autem velit molestias.</li>
+                          <li id="message2" class="news-item">2/6/2015 4:51:58 414467: Libero ut incidunt quaerat. Fugit velit aut aliquid. Omnis voluptas fuga tempora expedita odio ex. Aut tempora dolor autem velit molestias.</li>
+                          <li id="message3" class="news-item">2/6/2015 4:51:58 414467: Libero ut incidunt quaerat. Fugit velit aut aliquid. Omnis voluptas fuga tempora expedita odio ex. Aut tempora dolor autem velit molestias.</li>
+                          <li id="message4" class="news-item">2/6/2015 4:51:58 414467: Libero ut incidunt quaerat. Fugit velit aut aliquid. Omnis voluptas fuga tempora expedita odio ex. Aut tempora dolor autem velit molestias.</li>
+                          <li id="message5" class="news-item">2/6/2015 4:51:58 414467: Libero ut incidunt quaerat. Fugit velit aut aliquid. Omnis voluptas fuga tempora expedita odio ex. Aut tempora dolor autem velit molestias.</li>
 
                         </ul>
                         
